<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PMA</string>
    <string name="btnHome">Početna</string>
    <string name="placeholderName">Ime</string>
    <string name="placeholderSurname">Prezime</string>
    <string name="placeholderSubject">Predmet</string>
    <string name="placeholderBirthday">Datum rođenja</string>
    <string name="placeholderProfessor" tools:ignore="Typos">Profesor</string>
    <string name="placeholderAcademicYear">Akademska god</string>
    <string name="placeholderLabHours">Sati lv</string>
    <string name="placeholderLectureHours">Sati pred</string>
    <string name="labelBirthday">Datum rođenja</string>
    <string name="headerStudent">Studenti</string>
    <string name="btnAddStudent">Novi student</string>
    <string name="btnOpenCamera">Otvori kameru</string>
    <string name="btnGallery">Otvori galeriju</string>
    <string name="tvChangeImage">Promjeni zadanu sliku</string>
    <string name="btnDefault">Vrati zadanu sliku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>