<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.PersonalInfoFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context=".fragments.PersonalInfoFragment">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="150dp"
                android:id="@+id/imgView1"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                android:src="@drawable/favicon"
                />
            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/imgView1"
                android:layout_height="2dp"
                android:id="@+id/piLine1"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutName"
                app:layout_constraintTop_toBottomOf="@+id/piLine1"
                app:layout_constraintRight_toLeftOf="@+id/inputLayoutSurname"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintWidth_percent="0.45"
                android:hint="@string/placeholderName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutSurname"
                app:layout_constraintTop_toBottomOf="@+id/piLine1"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintWidth_percent="0.45"
                android:hint="@string/placeholderSurname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:id="@+id/piLine2"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutSurname"
                android:layout_height="2dp"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutBirthday"
                app:layout_constraintTop_toBottomOf="@+id/piLine2"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintWidth_percent="0.45"
                android:hint="@string/placeholderBirthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/piLine2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/inputLayoutBirthday"
                android:textAlignment="textStart"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintWidth_percent="0.40"
                android:text="@string/labelBirthday"
                />
            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutBirthday"
                android:layout_height="2dp"
                android:id="@+id/piLine3"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>