<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StudentInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/black"
            android:layout_width="fill_parent"
            tools:context=".fragments.StudentInfoFragment"
            android:layout_height="fill_parent">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="150dp"
                android:id="@+id/imgView2"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                android:src="@drawable/favicon"
                />
            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/imgView2"
                android:id="@+id/siLine1"
                android:layout_height="2dp"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutSubject"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/siLine1"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/placeholderSubject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutSubject"
                android:id="@+id/siLine2"
                android:layout_height="2dp"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutProfessor"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/inputLayoutAcademicYear"
                app:layout_constraintTop_toBottomOf="@+id/siLine2"
                android:layout_marginStart="16dp"
                app:layout_constraintWidth_percent="0.45"
                android:hint="@string/placeholderProfessor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProfessor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/inputLayoutProfessor"
                android:id="@+id/inputLayoutAcademicYear"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/siLine2"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintWidth_percent="0.43"
                android:layout_marginEnd="16dp"
                android:hint="@string/placeholderAcademicYear">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAcademicYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutProfessor"
                android:id="@+id/siLine3"
                android:layout_height="2dp"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutLectureHours"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/inputLayoutLabHours"
                app:layout_constraintTop_toBottomOf="@+id/siLine3"
                android:layout_marginStart="16dp"
                app:layout_constraintWidth_percent="0.45"
                android:hint="@string/placeholderLectureHours">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLectureHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/inputLayoutLectureHours"
                android:id="@+id/inputLayoutLabHours"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/siLine3"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintWidth_percent="0.43"
                android:layout_marginEnd="16dp"
                android:hint="@string/placeholderLabHours">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLabHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutLectureHours"
                android:id="@+id/siLine4"
                android:layout_height="2dp"
                android:layout_marginVertical="16dp"
                android:background="#c0c0c0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>